# i-did

./: .flake8  .pre-commit-config.yaml  Pipfile  README.rst  i_did.py  pyproject.toml  setup.py
i_did/: __init__.py  cli.py  datastore.py  utils.py
