[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "i_did"
dist-name = "i-did"
author = "Samuel Searles-Bryant"
author-email = "devel@samueljsb.co.uk"
home-page = "https://github.com/samueljsb/i-did"
description-file = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires = [
    "Click >=7.0",
]
requires-python = ">=3.6"

[tool.flit.scripts]
i-did = "i_did.cli:cli"
